<resources>
    <string name="app_name">Calculadora</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="suma">+</string>
    <string name="resta">-</string>
    <string name="dividir">/</string>
    <string name="multiplicar">x</string>
    <string name="igual">=</string>
    <string name="punto">.</string>
    <string name="c">c</string>
    <string name="ce">ce</string>
    <string name="percentage">%</string>

</resources>